--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -99,6 +99,9 @@
   .small {
     font-size: $type-size-6;
   }
+.mini {
+    font-size: 14px;
+  }
 
   /* blockquote citations */
   blockquote + .small {
